src/styles/main.css
body{
  /* vars */
  --crlngn-border-radius: 4px; /*calc(var(--control-item-size) / 6);*/
  --control-item-size: 38px;/* size of control icon buttons */
  --crlngn-control-size: 38px;
}

body.crlngn-ui.crlngn-glass-effect .application:not(.dnd5e2.sheet, .tidy5e-sheet, .monks-enhanced-journal) .window-content {
  background: transparent !important;
  backdrop-filter: none;
  -webkit-backdrop-filter: none;
}
body.crlngn-ui.crlngn-glass-effect .application:not(.dnd5e2.sheet, .tidy5e-sheet, .journal-sheet, .monks-enhanced-journal, #resources, #daggerheart-hud, #daggerheart-gm-hud),
body.crlngn-ui.crlngn-glass-effect .window-app:not(.monks-enhanced-journal) {
  background: var(--background);
  backdrop-filter: blur(var(--background-blur, 4px));
  -webkit-backdrop-filter: blur(var(--background-blur, 4px));
}



body.crlngn-ui  {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  /*font-family: var(--crlngn-font-family);*/
  font-weight: 500;
}

body.crlngn-ui #pause {
  background: linear-gradient(to right, transparent 0%, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 0.5) 60%, transparent 100%);
}

/* HEADINGS */
body.crlngn-ui  {
  --color-text-selection-bg: var(--color-highlights-50);
  h1, h2, h3, h4:not(.dice-total), h5, h6 {
    font-weight: 600;
    border-bottom: 0;
  }
  h1, h2, h3 {
    line-height: 1.25;
  }
  h4, h5, h6 {
    line-height: 1.25;
  }

  .window-header, .window-header > *, .window-header .window-title > * {
    text-shadow: 0px 1px 2px var(--color-text-inverted);
  }
}
body.crlngn-ui.cui-font-t {
  h1, h2, h3 {
    font-family: var(--crlngn-font-titles);
  }
}
body.crlngn-ui.cui-font-ui {
  h4, h5, h6 {
    font-family: var(--crlngn-font-family);
  }
  .sidebar-tab search {
    input, select, textarea {
      font-family: var(--crlngn-font-family);
    }
  }
  .standard-form.crlngn h4,
  .standard-form.crlngn h5,
  .standard-form.crlngn h6,
  #crlngn-color-picker h4,
  #crlngn-color-picker h5,
  #crlngn-color-picker h6 {
    font-family: var(--crlngn-font-family);
  }
  .standard-form.crlngn span.toggle-hint,
  #crlngn-color-picker span.toggle-hint {
    font-family: var(--crlngn-font-family);
  }
  .application:not(.monks-enhanced-journal) .window-header .window-title {
    font-family: var(--crlngn-font-family);
  }
  #tooltip {
    font-family: var(--crlngn-font-family);
  }
  :is(.dnd5e2-tooltip, .item-tooltip, .effect-tooltip) .description p span {
    font-family: var(--crlngn-font-family);
  }
}

body.crlngn-ui {
  a.button:hover, button:hover{
    border-color: var(--color-highlights);
  }

  .content-link, .inline-roll {
    border-color: light-dark(rgba(255,255,255,0.3), rgba(255,255,255,0.05));
    background-color: light-dark(rgba(0,0,0,0.05), rgba(255,255,255,0.1));
    color: inherit;
  }
  /*
  input[type="checkbox"]:checked::before {
    font-size: 1em;
    content: "\f00c";
    text-align: center;
    color: var(--color-text-primary);
  }*/
  /*
  input[type="checkbox"]:checked::after {
    content: "";
  }*/

  .sidebar-tab {
    h4.dice-total{
      font-weight: 600;
    }
  }
  fieldset{
    border-style: solid;
    border-width: 1px;
    border-color: var(--color-cool-4);
    margin: 1rem 0;
    gap: 2px;
  }
  .dnd5e-tooltip {
    --dnd5e-color-parchment: rgb(244, 239, 237);
    --color-text-primary: var(--color-dark-1);
    --color-text-secodary: var(--color-dark-3);
  }


  input[type=checkbox], input[type=radio] {
    /*--checkbox-checkmark-color: transparent;*/
    &:after{
      font-size: var(--font-size-22);
    }
  }


  #interface .hidden-ui{
    opacity: 0 !important;
    pointer-events: none !important;
    *{
      pointer-events: none !important;
    }
  }

}

/*************/
/* JOURNAL TOGGLE BUTTON */
body.crlngn-ui {
  .crlngn-journal-toggle {
    opacity: 0.5;
    &:hover {
      opacity: 1;
    }
  }
  &.crlngn-journals .crlngn-journal-toggle {
    opacity: 1;
  }
}


/*************/
/* JOURNALS - only when journal styles enabled */
body.crlngn-ui.crlngn-journals {
  .app.journal-entry.sheet {
    .journal-entry-content {
      background: var(--control-bg-color);
      border: 2px solid #000;
    }
    .journal-sidebar {
      background: transparent;
      color: var(--color-text-primary);
    }
    .action-buttons button{
      color: var(--color-text-primary);
      background: var(--color-bg-button);
      border-color: transparent;
    }
  }
  .sheet.journal-entry {
    line-height: 1.6;
    /*
    .action-buttons button {
      border-color: transparent;
      background: var(--color-bg-button);
      color: var(--color-text-primary);
    }*/

    h1, h2, h3 {
      margin: 1.5rem 0 0.5rem 0;
    }
    h4, h5, h6 {
      margin: 1.5rem 0 0.5rem 0;
    }
    .stat-block-finder{
      margin: 2rem 0;
    }
    p{
      line-height: 1.6;
    }

    .window-title {
      margin: 0.5rem 0;
    }
  }
}

/* Journal Body Font - only when enabled AND journal styles enabled */
body.crlngn-ui.crlngn-journals.cui-font-jrnl {
  .journal-entry-content, .journal-page-content{
    font-family: var(--crlngn-font-journal-body);
  }
  .sheet.journal-entry {
    font-family: var(--crlngn-font-journal-body);
    h4, h5, h6 {
      font-family: var(--crlngn-font-journal-body);
    }
    p{
      font-family: var(--crlngn-font-journal-body);
    }
  }
}

/* Journal Titles Font - only when enabled AND journal styles enabled */
body.crlngn-ui.crlngn-journals.cui-font-jrnl-t {

  .sheet.journal-entry, .journal-entry-content {
    h1, h2, h3 {
      font-family: var(--crlngn-font-journal-title);
    }
    .journal-header {
      font-family: var(--crlngn-font-journal-title);
    }
  }
}
/* ... */

